--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@
 # VITE_ENABLE_CS=false
 # VITE_ENABLE_FEMALE=false
 # VITE_ENABLE_PROBABILITIES=false
+
+# --- Google AdSense ---
+# Publisher ID em: https://adsense.google.com > Account > Account information
+VITE_ADSENSE_CLIENT=ca-pub-XXXXXXXXXXXXXXXX
+# Slot IDs em: AdSense > Ads > By ad unit > Create ad unit
+VITE_ADSENSE_SLOT_BANNER=XXXXXXXXXX
+VITE_ADSENSE_SLOT_SIDEBAR=XXXXXXXXXX
